--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="corpo">
 		<h1>Sobre a Anna Bella</h1>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget turpis non neque sagittis molestie. Aliquam eu fermentum est. Phasellus ullamcorper eu eros id congue. Vestibulum suscipit facilisis diam quis aliquet. Morbi eleifend bibendum dui vel condimentum. Sed eu auctor libero. Praesent faucibus libero eu purus euismod, nec iaculis libero accumsan. Morbi mollis lorem in tortor bibendum, sed interdum enim interdum. Nulla id urna nec nisl consectetur interdum.
+			Lorem ipsum dolor teste amet, consectetur adipiscing elit. Sed eget turpis non neque sagittis molestie. Aliquam eu fermentum est. Phasellus ullamcorper eu eros id congue. Vestibulum suscipit facilisis diam quis aliquet. Morbi eleifend bibendum dui vel condimentum. Sed eu auctor libero. Praesent faucibus libero eu purus euismod, nec iaculis libero accumsan. Morbi mollis lorem in tortor bibendum, sed interdum enim interdum. Nulla id urna nec nisl consectetur interdum.
 		</p>
 		<p>
 			Curabitur id volutpat augue, sit amet tempus orci. Donec at bibendum libero. Nunc vitae mauris ex. Morbi lobortis eros in nisl egestas laoreet. Quisque et scelerisque erat, ut consequat quam. Cras accumsan sem vel nunc gravida tempus. Aliquam consectetur euismod mi vitae aliquam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris metus libero, vehicula quis ultrices in, consectetur sit amet leo. Integer mollis sapien ac lectus tempor, eu semper elit pretium.
